--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "axios": "^0.21.1",
-    "jest": "^26.6.0"
+    "jest": "^26.6.0",
+    "jest-when": "^3.3.1"
   }
 }
