--- a/package.json
+++ b/package.json
@@ -36,8 +36,14 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "axios": "^0.21.1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "jest": "^26.6.0",
     "jest-when": "^3.3.1"
+  },
+  "jest": {
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   }
 }
