try new conf on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,12 @@ os: linux
 arch:
   - ppc64le
 dist: focal
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  local_dir: coverage/src
+  on:
+    branch: main
