--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ arch:
 dist: focal
 
 deploy:
-  provider: pages
+  provider: pages:git
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
   keep_history: true
   local_dir: coverage/lcov-report
   target_branch: doc
