--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "jest": "^26.6.0",
